# PythonCode

./: .gitignore  AGENTS.md  README.md  run-dev.ps1
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  database.py  main.py
backend/app/models/: __init__.py  emotion_option.py  import_batch.py  setup_option.py  trade.py  trade_fill.py
backend/app/routers/: __init__.py  admin.py  backup.py  emotions.py  import_batches.py  import_tos.py  setups.py  stats.py  summary.py  tickers.py  trades.py
backend/app/schemas/: __init__.py  backup.py  emotion.py  import_batch.py  import_preview.py  setup.py  stats.py  summary.py  trade.py
backend/app/services/: __init__.py  scoring.py  tos_import.py  trade_computation.py  trade_validation.py
backend/tests/: test_admin_api.py  test_backup_api.py  test_cors.py  test_emotions_api.py  test_import_batch_model.py  test_import_batches_api.py  test_scoring.py  test_setup_migration.py  test_setups_api.py  test_stats_api.py  test_stats_insight_engine.py  test_stats_insights_api.py  test_summary_api.py  test_tickers_api.py  test_tos_import_commit_api.py  test_tos_import_preview_api.py  test_trade_fill_model.py  test_trade_fill_summary_api.py  test_trade_fills_api.py  test_trade_model.py  test_trades_api.py
docs/: QA_CHECKLIST.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CollapsibleSection.css  CollapsibleSection.tsx  DailySummary.css  EmptyState.css  (+23 more)
(+25 files in other folders)
