[project]
name = "discipline-tracker-backend"
version = "0.1.0"
description = "Backend service for Discipline Tracker MVP"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/routers/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
